# Glass

./: Cargo.toml  README.md
.config/: nextest.toml
.github/: CODEOWNERS
.github/DISCUSSION_TEMPLATE/: feature-requests.yml
.github/ISSUE_TEMPLATE/: 10_bug_report.yml  11_crash_report.yml  config.yml
.github/workflows/: assign-reviewers.yml  build_linux.yml  release_glass.yml  run_tests.yml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
assets/settings/: default.json
crates/acp_tools/src/: acp_tools.rs
crates/agent/src/: agent.rs  thread.rs
crates/agent_ui/src/: agent_diff.rs  agent_panel.rs  agent_ui.rs  text_thread_editor.rs  threads_archive_view.rs
crates/ai_onboarding/src/: agent_api_keys_onboarding.rs  agent_panel_onboarding_card.rs
crates/app_runtime/: Cargo.toml
crates/app_runtime/src/: app_runtime.rs  apple_runtime_provider.rs  capability_state.rs  command_output.rs  command_runner.rs  detected_project.rs  execution_plan.rs  execution_request.rs  runtime_action.rs  runtime_capability_set.rs  runtime_catalog.rs  runtime_device.rs  runtime_error.rs  runtime_target.rs
crates/app_runtime_ui/: Cargo.toml
crates/app_runtime_ui/src/: app_runtime_ui.rs  runtime_actions_modal.rs  runtime_status_button.rs
crates/audio/src/: audio.rs  audio_settings.rs
crates/auto_update/src/: auto_update.rs
crates/browser/: Cargo.toml
crates/browser/src/: bookmarks.rs  browser.rs  browser_view.rs  cef_instance.rs  client.rs  history.rs  input.rs  new_tab_page.rs  omnibox.rs  page_chrome.rs  render_handler.rs  tab.rs  text_input.rs  toolbar.rs
crates/browser/src/browser_view/: content.rs  input.rs  navigation.rs  swipe.rs  tab_strip.rs  tabs.rs
crates/client/src/: client.rs
crates/component_preview/: Cargo.toml
crates/component_preview/src/: component_preview.rs
crates/debugger_ui/: Cargo.toml
crates/debugger_ui/src/: debugger_panel.rs  session.rs
crates/diagnostics/src/: diagnostics.rs
crates/edit_prediction_cli/src/: main.rs
crates/edit_prediction_ui/src/: edit_prediction_button.rs  rate_prediction_modal.rs
crates/editor/src/: display_map.rs  editor.rs  editor_tests.rs  element.rs  movement.rs
crates/eval_utils/: Cargo.toml
crates/extension_cli/: Cargo.toml
crates/extensions_ui/src/: extensions_ui.rs
crates/file_finder/: Cargo.toml
crates/file_finder/src/: file_finder.rs
crates/git_ui/: Cargo.toml
crates/platform_title_bar/: Cargo.toml
crates/project_panel/: Cargo.toml
crates/service_hub/: Cargo.toml
crates/service_hub_ui/: Cargo.toml
crates/service_hub_ui/src/: app_store_connect_provider.rs  service_hub_ui.rs  services_page.rs  services_provider.rs
crates/sidebar/: Cargo.toml
crates/title_bar/: Cargo.toml
crates/worktree_benchmarks/: Cargo.toml
crates/zed/: Cargo.toml
crates/zed/src/: zed.rs  (+2 more)
docs/src/: debugger.md  finding-navigating.md  git.md
extensions/glass-theme/: README.md  extension.toml
nix/: build.nix
script/: cargo-gpui-local  zed-local
(+119 files in other folders)
